# object_detection

./: LICENSE  README.md  pyproject.toml
notebooks/: end_2_end.ipynb
object_detection/backbone_cnn/: resnet50.py
object_detection/dataset/: object_detection.py
object_detection/preprocessing/: cvat.py
object_detection/region_processing/: anchor.py
object_detection/visualization/: utils.py
