[tool.poetry]
name = "object-detection"
version = "0.1.0"
description = "Project to learn about object detection."
authors = ["Paulo Soares"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
scikit-image = "^0.23.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"
torchvision = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
